@@ -72,6 +72,8 @@ Feature Additions:
  -- Add /nostrip switch to @chown, @chownall, and @clone.
  -- Add new successes() code from Jon@Firan.
  -- Combine old and new versions of SUCCESSES().
+ -- Added comalias, doing, exitname, malias, maliasdesc, and password
+    tests to VALID() (Issue 211).
 
 
 Bug Fixes:
